@@ -1,3 +1,6 @@
+2013-01-04
+ Plugin system added.
+
 2013-01-03
  Handle tcl::mathfunc for user defined functions.
 
